Fix: problem with low frequency of getting tf from map to base_footprint

--- a/navigation/path_tracker/params/pathTracker.yaml
+++ b/navigation/path_tracker/params/pathTracker.yaml
@@ -1,6 +1,7 @@
 active: true
 robot_type: omni
-frame: map
+map_frame: map
+odom_frame: odom
 control_frequency: 30
 lookahead_distance: 0.1
 waiting_timeout: 5
