--- a/navigation/path_tracker/CMakeLists.txt
+++ b/navigation/path_tracker/CMakeLists.txt
@@ -13,6 +13,10 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   geometry_msgs
   nav_msgs
+  tf2_geometry_msgs
+  tf2_ros
+  tf2_msgs
+  tf
 )
 
 ## System dependencies are found with CMake's conventions
