--- a/navigation/navigation_run/config/costmap_common_params.yaml
+++ b/navigation/navigation_run/config/costmap_common_params.yaml
@@ -1,6 +1,6 @@
 # range settings
 obstacle_range: 3 # lidar range
-raytrace_range: 3 # clear the overlapped obstacles on the path, only for the obstacle layer
+raytrace_range: 12 # clear the overlapped obstacles on the path, only for the obstacle layer
 
 # hexagonal footprint
 # footprint: [[0,0.15],[0.1299,0.075],[0.1299,-0.075],[0,-0.15],[-0.1299,-0.075],[-0.1299,0.075]]
@@ -9,17 +9,13 @@ robot_radius: 0.3
 # map info
 map_topic: map
 subscribe_to_updates: true
-update_frequency: 20.0  # frequency to update costmap
-publish_frequency: 10.0 # frequency to publish the new costmap to Rviz
+update_frequency: 2.0  # frequency to update costmap
+publish_frequency: 5.0 # frequency to publish the new costmap to Rviz
 
 # Choose which layer to use. ( The order of layers matters !!! )
 plugins:
-  - {name: static_layer, type: "costmap_2d::StaticLayer"} 
-  # - {name: simple_layer, type: "simple_layer_namespace::GridLayer"}  
-  # - {name: path_layer, type: "path_layer_namespace::PathLayer"}   
-  # - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"} 
-  # - {name: simple_layer, type: "simple_layer_namespace::SimpleLayer"} 
-  # - {name: lidar_obstacle_layer, type: "lidar_obstacle_layer_namespace::LidarObstacleLayer"} 
+  - {name: static_layer, type: "costmap_2d::StaticLayer"}  
+  - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"} 
   - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
   
 # Layer parameters
@@ -31,69 +27,12 @@ static_layer:
   lethal_cost_threshold: 100
   update_frequency: 5.0
 
+obstacle_layer:
+  enabled: true
+  observation_sources: laser_scan_sensor
+  laser_scan_sensor: {sensor_frame: base_scan, data_type: LaserScan, topic: scan_filtered, marking: true, clearing: true}
+
 inflation_layer:
   enabled: true
   inflation_radius: 1.0
   cost_scaling_factor: 3.0
-
-path_layer:
-  enabled: true
-  # Inflation parameters
-  Inflation:
-    Robot:
-      CostScalingFactor: 10
-      InscribedRadius: 0.19         # Unit: m
-      InflationRadius: 0.5         # Unit: m (MaxDistance)
-    Rival:
-      CostScalingFactor: 10
-      InscribedRadius: 0.15         # Unit: m
-      InflationRadius: 0.5         # Unit: m (MaxDistance)
-      InscribedRadiusDecline: 0.85  # Unit: m / Resolution
-  # Timeout -1 -> Disable Timeout 
-  Timeout:
-    Robot:
-      Odom: -1
-      Path: 1.0
-    Rival:
-      Odom: 5
-      Obstacle: 1.0
-  Topic:
-    Rival:
-      Obstacle: /RivalObstacle
-  # Predict Length
-  PredictLength:
-    # Robot param will be set in move_base.launch
-    Rival:
-      Odom: 2          # Unit: s
-      MaxLength:  0.7  # Unit: m
-      Resolution: 0.05 # Unit: m
-
-# obstacle_layer:
-#   enabled: true
-#   observation_sources: laser_scan_sensor
-#   laser_scan_sensor: {sensor_frame: laser_frame, data_type: LaserScan, topic: scan, marking: true, clearing: true}
-
-# lidar_obstacle_layer:
-#   enabled: true
-#   obstacle_topic: obstacles_to_map #test
-#   obstacle_radius: 3
-#   expand_division: 30 # total points of the expanded profile
-
-# inflation_layer:
-#   enabled: true
-#   cost_scaling_factor: 10
-#   inflation_radius: 0.3
-
-simple_layer:
-  enabled: true
-
-  update_frequency: 10
-  inflation_radius: 0.15
-  inscribed_radius: 0.06
-  cost_factor: 13.0
-
-  tolerance: 0.07
-  threshold_time: 1 # unit: seconds
-  clear_radius: 0.16
-  # odom_callback_type: 0    # 0:odom, 1:ekf_pose
-  # odom_topic: ekf_pose
