--- a/navigation/robot_interface/config/interface.yaml
+++ b/navigation/robot_interface/config/interface.yaml
@@ -12,20 +12,20 @@ resend_frequency: 5       # unit: Hz
 # ***REMEMBER ADD DECIMAL. CANNOT LIKE [1,0,0]*** 
 goal: [
   # Floor1
-  [[1.0,0.0,0.0], # GOAL1
-  [1.0,1.0,1.0],  # GOAL2
-  [2.0,3.0,1.0],  # GOAL3
-  [3.0,3.0,2.0],], # GOAL4
+  [[1.0,0.0,0.0],  # GOAL1
+  [1.0,1.0,1.0],   # GOAL2
+  [2.0,3.0,1.0],   # GOAL3-1 elevator left
+  [3.0,3.0,2.0],], # GOAL3-2 elevator right
   # Floor2
   [[1.0,0.0,0.0], 
   [1.0,1.0,1.0],  
   [2.0,3.0,1.0],  
   [3.0,3.0,2.0],],
   # Floor3
-  [[-8.0,-3.0,0.0], 
+  [[-7.91, -5.51, 1.56], 
   [-7.0,-4.5,0.0],  
-  [2.0,3.0,1.0],  
-  [3.0,3.0,2.0],],
+  [-8.1,-5.77,3.141],  
+  [-8.18, -3.38,3.1415],],
   # Floor4
   [[1.0,0.0,0.0], 
   [1.0,1.0,1.0],  
