Test: test on panda

--- a/navigation/navigation-stack/map_server/map_config_final/EngBuild3.yaml
+++ b/navigation/navigation-stack/map_server/map_config_final/EngBuild3.yaml
@@ -1,4 +1,4 @@
-image: EngBuild3-Restricted.png
+image: EngBuild3-Elevator.png
 resolution: 0.030000
 origin: [-74.310000, -21.510000, 0.000000]
 negate: 0
