--- a/navigation/robot_interface/config/interface.yaml
+++ b/navigation/robot_interface/config/interface.yaml
@@ -21,11 +21,13 @@ goal: [
   [1.0,1.0,1.0],  
   [2.0,3.0,1.0],  
   [3.0,3.0,2.0],],
-  # Floor3
-  [[-7.91, -5.51, 1.56], 
-  [-7.0,-4.5,0.0],  
+  # Foor3
+  [[-8.1, -5.04, 0.73], 
+  [-7.33,-4.52, 3.1415],  
   [-8.1,-5.77,3.141],  
-  [-8.18, -3.38,3.1415],],
+  [-8.18, -3.38,3.1415],
+  [-9.8, -5.74, -3.13],
+  [-9.8,-3.4,-3.13]],
   # Floor4
   [[1.0,0.0,0.0], 
   [1.0,1.0,1.0],  
