--- a/navigation/robot_interface/config/interface.yaml
+++ b/navigation/robot_interface/config/interface.yaml
@@ -29,10 +29,12 @@ goal: [
   [-9.80, -5.74, 2.356],     # GOAL4-1 elevator left  (inside)
   [-9.80, -3.40, 2.356]],    # GOAL4-2 elevator right (inside)
   # Floor4
-  [[1.0,0.0,0.0], 
-  [1.0,1.0,1.0],  
-  [2.0,3.0,1.0],  
-  [3.0,3.0,2.0],],
+  [[-8.1, -5.04, 0.73],      # GOAL1
+  [-6.74, -4.66, 3.1415],    # GOAL2
+  [-8.10, -5.77, 2.356],     # GOAL3-1 elevator left  (outside)
+  [-8.18, -3.38, 2.356],     # GOAL3-2 elevator right (outside)
+  [-9.80, -5.74, 2.356],     # GOAL4-1 elevator left  (inside)
+  [-9.80, -3.40, 2.356]],    # GOAL4-2 elevator right (inside)
   # Floor5
   [[1.0,0.0,0.0], 
   [1.0,1.0,1.0],  
