Feat: tracker_dynamic_obstacle.cpp

--- a/navigation/tracking_system/CMakeLists.txt
+++ b/navigation/tracking_system/CMakeLists.txt
@@ -156,6 +156,10 @@ add_executable(tracker src/tracker.cpp)
 add_dependencies(tracker ${catkin_EXPORTED_TARGETS})
 target_link_libraries(tracker ${catkin_LIBRARIES})
 
+add_executable(tracker_dynamic_obstacle src/tracker_dynamic_obstacle.cpp)
+add_dependencies(tracker_dynamic_obstacle ${catkin_EXPORTED_TARGETS})
+target_link_libraries(tracker_dynamic_obstacle ${catkin_LIBRARIES})
+
 add_executable(ekf_tracker src/ekf_tracker.cpp src/obstacle.cpp)
 add_dependencies(ekf_tracker ${catkin_EXPORTED_TARGETS})
 target_link_libraries(ekf_tracker ${catkin_LIBRARIES})
